autotests/syntax-tests-simple-refal/tests/negative/negative80.sref
Name { Name Name , $ESWAP Name Name : { } : , : = : = ; = ;
} ; 